+ Battle victory/defeat music now plays properly when viewing the summary.
+ Races are no longer grayed out on the scenario panel when restarting a game.
+ All units in battle now deal a minimum of 1 damage, with damage modifiers
  now capped at -30% and 300% as specified in the original manual.
+ Heroes may no longer surrender to non-heroes.

Developers
+ Added wrapper library around SDL_net and networking client/server examples.
+ Added support for replacing ICN files at runtime with other images.

March 19, 2009 - Development build r915

Users
+ Added Russian translation .po file.
+ Added actions for Mermaids, Sirens, Arenas, Stables, Barrow Mounds, Elemental Recruiting, Jails, HutMagi,
  EyeMagi, and Sphinxes.
+ Added load and save game support.
+ AI battles now use battle system logic to properly decide outcomes.
+ Added support for castle and town battles.
+ Arrow keys now move the current hero, while CTRL+arrow scrolls the map view.  

Developers
+ Removed libxml2 dependence
+ Added build options (WITHOUT_PNG, WITHOUT_UNICODE)
+ Battle engine rewritten to separate logic from display, and to allow
  for future expansion (ie. castles/towns).
+ Added gettext support.
+ Unicode support with TTF font render.

February 1, 2009 - Development build r850

Users
+ Added icn2png convertor tools
+ Campfires now give gold rewards along with other resources. (afletdinov)
+ Numeric fields now accept keyboard input. (afletdinov)
+ Black Dragons now correctly cost 2 sulphur. (afletdinov)
+ Artifacts with resource costs are now fixed, instead of changing randomly
  each time a hero touches the artifact. (afletdinov)
+ Fixed maps generating the same random artifact multiple times. (afletdinov)
+ Added actions for Tree of Knowledge, Oracle, and Demon Cave map objects. (afletdinov)
+ Fixed various endian issues which made fheroes2 unplayable on AmigaOS. (afletdinov)
+ Added keyboard hotkeys for buttons on the main menu and ending the turn in game.
  (afletdinov, revvy)
