@@ -7,6 +7,7 @@ Users
 + All units in battle now deal a minimum of 1 damage, with damage modifiers
   now capped at -30% and 300% as specified in the original manual.
 + Heroes may no longer surrender to non-heroes.
++ Removed 'Upgrade' and 'Dismiss' buttons from monster info dialogs in battle.
 
 Developers
 + Added wrapper library around SDL_net and networking client/server examples.
